tests/NormalTests/paczka1/small_fuzzy/92962187.err
Error in line 1: 4wE8069fl3P S509 5,0
Error in line 4: A274 A274 30,5
